corrección de errores y actualización

--- a/desviacion_estandar.ipynb
+++ b/desviacion_estandar.ipynb
@@ -365,9 +365,19 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "e1bf647e-307f-485f-91ed-0a580dcf620b",
+   "metadata": {},
+   "source": [
+    "##  ¿Por qué ocuparla?\n",
+    "\n",
+    "La desviación estándar es una medida importante ya que permite conocer qué tan dispersos están los datos respecto a su promedio. Al cuantificar la variabilidad, nos ayuda a entender si los valores se agrupan cerca de la media o si están más alejados. Esta información es esencial para interpretar la consistencia de los datos, comparar distribuciones y evaluar el grado de incertidumbre en observaciones o predicciones. En contextos analíticos, conocer la dispersión es tan relevante como conocer el promedio, ya que permite tomar decisiones más informadas y detectar patrones o anomalías con mayor precisión."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9733b74d-a104-48c4-80a9-9f0311e7c064",
+   "id": "a5f233c0-6376-4c52-b29d-3c67b1a4bc72",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -375,9 +385,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:base] *",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
-   "name": "conda-base-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -389,7 +399,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.7"
+   "version": "3.11.6"
   }
  },
  "nbformat": 4,
