--- a/correlacion.ipynb
+++ b/correlacion.ipynb
@@ -78,7 +78,7 @@
    "id": "9edc5cd2-3a12-4393-93b3-cbfce2c95e72",
    "metadata": {},
    "source": [
-    "## 📚 Librerías\n",
+    "##  Librerías\n",
     "\n",
     "Antes de comenzar con los ejercicios, debemos importar las librerías que utilizaremos. En este caso, son:\n",
     "\n",
@@ -123,7 +123,7 @@
    "id": "7b5a9fc6-caa1-4265-b8d2-22eae63fcbc2",
    "metadata": {},
    "source": [
-    "## 📊Datos \n"
+    "## Datos \n"
    ]
   },
   {
@@ -1428,20 +1428,6 @@
     "\n",
     "Las ecuaciones $(A.4)$ y $(A.5)$ proporcionan los valores de $m$ y $b$ de un punto crítico de la función $f(m,b)$. Falta demostrar que ese punto crítico es un mínimo. Para ello se deben calcular las derivadas segundas ($\\dfrac{\\partial}{\\partial^2 m}$, $\\dfrac{\\partial}{\\partial^2 b}$, $\\dfrac{\\partial}{\\partial m \\partial b}$) y ver que se cumplen los criterios necesarios."
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "4aac91e2-1fd8-4ade-b6f9-8a325cededa6",
-   "metadata": {},
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "b451848d-095a-49c1-8480-87a08e97f783",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
