Actualizacion de varianza pt1

--- a/varianza.ipynb
+++ b/varianza.ipynb
@@ -2,35 +2,38 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "07f1e64d-53dc-4f08-946d-4032554d929c",
+   "id": "b91f5a45-0e50-492f-8c2a-cc99e42a25f2",
    "metadata": {},
    "source": [
-    "# Varianza: Medida de dispersión\n",
+    "<div class=\"alert alert-success\">\n",
+    "## Definición\n",
     "\n",
-    "La **varianza** es una medida estadística que indica cuánto se dispersan los datos respecto a su media. Es fundamental para entender la variabilidad en conjuntos de datos, y sirve como base para otros conceptos como la desviación estándar y el análisis de regresión.\n",
+    "La varianza es una medida de dispersión que indica cuánto se alejan los valores de un conjunto respecto a su media. Es útil para entender la variabilidad de los datos y sirve como base para otras medidas como la desviación estándar.\n",
     "\n",
-    "En este notebook aprenderás:\n",
-    "- Qué representa la varianza.\n",
-    "- Cómo se calcula paso a paso.\n",
-    "- Cómo interpretarla en contextos reales."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "0adc7c21-9c03-4bdc-b38f-dc65f779d1b9",
-   "metadata": {},
-   "source": [
-    "##  Fórmulas de la varianza\n",
+    "Por ejemplo, si tenemos el siguiente conjunto de valores $X = \\{3, 5, 1, 2\\}$, primero calculamos la media:  \n",
+    "$\\bar{X} = (3 + 5 + 1 + 2)/4 = 11/4 = 2.75$  \n",
+    "Luego, calculamos la varianza poblacional como sigue:  \n",
+    "$\\sigma^2 = \\dfrac{1}{4}[(3 - 2.75)^2 + (5 - 2.75)^2 + (1 - 2.75)^2 + (2 - 2.75)^2] = \\dfrac{1}{4}(0.0625 + 5.0625 + 3.0625 + 0.5625) = \\dfrac{8.75}{4} = 2.1875$\n",
     "\n",
-    "La varianza se define como el promedio de los cuadrados de las diferencias entre cada dato y la media. Es una medida que indica qué tan dispersos están los datos respecto al valor central.\n",
+    "El símbolo $\\sigma^2$ representa la varianza poblacional, mientras que $s^2$ se usa para la varianza muestral.\n",
     "\n",
-    "### Varianza poblacional\n",
+    "<div class=\"alert alert-block alert-info\">\n",
     "\n",
-    "$$\\sigma^2 = \\frac{1}{N} \\sum_{i=1}^{N} (x_i - \\mu)^2$$\n",
+    "**Definición.**\n",
     "\n",
-    "###  Varianza muestral\n",
+    "Dado un conjunto de datos $X = \\{x_1, \\dots, x_N\\}$ con media $\\mu$, la **varianza poblacional** se define como:\n",
     "\n",
-    "$$s^2 = \\frac{1}{n - 1} \\sum_{i=1}^{n} (x_i - \\bar{x})^2$$\n",
+    "$$\n",
+    "\\sigma^2 = \\dfrac{1}{N} \\sum_{i=1}^{N} (x_i - \\mu)^2\n",
+    "$$\n",
+    "\n",
+    "Y si se trata de una muestra con media $\\bar{x}$, la **varianza muestral** se define como:\n",
+    "\n",
+    "$$\n",
+    "s^2 = \\dfrac{1}{n - 1} \\sum_{i=1}^{n} (x_i - \\bar{x})^2\n",
+    "$$\n",
+    "\n",
+    "</div>\n",
     "\n",
     "### Donde:\n",
     "\n",
@@ -42,214 +45,221 @@
     "- $( \\sigma^2 )$: varianza poblacional  \n",
     "- $( s^2 )$: varianza muestral\n",
     "\n",
-    "> Al elevar las diferencias al cuadrado, evitamos que las desviaciones negativas se cancelen con las positivas, lo que permite medir la dispersión total de forma efectiva."
+    "Al elevar las diferencias al cuadrado, evitamos que las desviaciones negativas se cancelen con las positivas, lo que permite medir la dispersión total de forma efectiva.\n",
+    "</div>"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "3c1b5098-25b7-4455-b798-a9622ffa6d46",
+   "id": "22bbe36a-e863-4ced-913d-87c0ef8a19d2",
    "metadata": {},
    "source": [
-    "## Datos\n",
+    "<div class=\"alert alert-success\">\n",
     "\n",
-    "Generamos 1000 evaluaciones para 4 grupos de alumnos con distintos perfiles de rendimiento:\n",
-    "- **Grupo A**: alto y estable\n",
-    "- **Grupo B**: medio con altibajos\n",
-    "- **Grupo C**: bajo con mejoras graduales\n",
-    "- **Grupo D**: variable con alta dispersión"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
-   "id": "7178bc8a-c61a-4aae-8e45-aa71a1cfcddb",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Grupo A</th>\n",
-       "      <th>Grupo B</th>\n",
-       "      <th>Grupo C</th>\n",
-       "      <th>Grupo D</th>\n",
-       "      <th>Evaluación</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>89.3</td>\n",
-       "      <td>68.3</td>\n",
-       "      <td>64.7</td>\n",
-       "      <td>57.7</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>92.8</td>\n",
-       "      <td>77.3</td>\n",
-       "      <td>55.4</td>\n",
-       "      <td>64.9</td>\n",
-       "      <td>2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>89.6</td>\n",
-       "      <td>78.6</td>\n",
-       "      <td>56.6</td>\n",
-       "      <td>67.7</td>\n",
-       "      <td>3</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>90.2</td>\n",
-       "      <td>80.4</td>\n",
-       "      <td>56.4</td>\n",
-       "      <td>81.3</td>\n",
-       "      <td>4</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>87.2</td>\n",
-       "      <td>74.6</td>\n",
-       "      <td>61.3</td>\n",
-       "      <td>66.9</td>\n",
-       "      <td>5</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   Grupo A  Grupo B  Grupo C  Grupo D  Evaluación\n",
-       "0     89.3     68.3     64.7     57.7           1\n",
-       "1     92.8     77.3     55.4     64.9           2\n",
-       "2     89.6     78.6     56.6     67.7           3\n",
-       "3     90.2     80.4     56.4     81.3           4\n",
-       "4     87.2     74.6     61.3     66.9           5"
-      ]
-     },
-     "execution_count": 1,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
+    "## Ejercicio 1.\n",
+    "\n",
+    "Nuevamente el siguiente código en Python se genera un conjunto de datos simulados que representan las evaluaciones de desempeño académico de un grupo de alumnos (Grupo A) durante un periodo de $1000$ evaluaciones.\n",
+    "\n",
+    "```python\n",
     "import numpy as np\n",
-    "import pandas as pd\n",
     "\n",
-    "# Simulación de datos\n",
-    "np.random.seed(837)\n",
-    "n = 1000\n",
+    "np.random.seed(837) # Fijamos la semilla para reproducibilidad\n",
+    "n = 1000 # Número de evaluaciones simuladas\n",
     "\n",
+    "# Grupo A: alto y estable\n",
     "grupo_A = 90 + 5 * np.sin(np.linspace(0, 4 * np.pi, n)) + np.random.normal(0, 3, n)\n",
-    "grupo_B = 75 + 10 * np.sin(np.linspace(0, 4 * np.pi, n)) + np.random.normal(0, 5, n)\n",
-    "grupo_C = 60 + 8 * np.sin(np.linspace(0, 4 * np.pi, n)) + np.random.normal(0, 4, n)\n",
-    "grupo_D = 70 + 15 * np.sin(np.linspace(0, 4 * np.pi, n)) + np.random.normal(0, 7, n)\n",
     "\n",
-    "df = pd.DataFrame({\n",
-    "    \"Grupo A\": np.round(grupo_A, 1),\n",
-    "    \"Grupo B\": np.round(grupo_B, 1),\n",
-    "    \"Grupo C\": np.round(grupo_C, 1),\n",
-    "    \"Grupo D\": np.round(grupo_D, 1),\n",
-    "    \"Evaluación\": np.arange(1, n + 1)\n",
-    "})\n",
     "\n",
-    "df.head()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "f92d846c-f96d-446a-b8e5-463309426e17",
-   "metadata": {},
-   "source": [
-    "##  Cálculo paso a paso \n",
-    "\n",
-    "Vamos a calcular la varianza muestral sin usar `.var()`, siguiendo la fórmula paso a paso:\n",
-    "1. Calcular la media.\n",
-    "2. Restar la media a cada dato.\n",
-    "3. Elevar al cuadrado cada diferencia.\n",
-    "4. Sumar todos los cuadrados.\n",
-    "5. Dividir entre $( n - 1 )$."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "5f4b6805-fb61-427c-8651-09bb46a9baf1",
-   "metadata": {},
-   "source": [
-    "## Problema 1: Suma de cuadrados de desviaciones\n",
-    "\n",
-    "Calculamos $ (x_i - \\bar{x})^2 $ para el Grupo A, y sumamos los resultados."
+    "```"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "332199ee-379c-47c7-8ff8-6f2a23a3a56d",
+   "execution_count": 7,
+   "id": "c52024e2-1e25-44e0-a5bd-cd9203f3cbef",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Suma de cuadrados de desviaciones: 21459.56\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "dev_A = grupo_A - np.mean(grupo_A)\n",
-    "diferencias_cuadradas = dev_A ** 2\n",
+    "#Simulacion de caliicaciones de alumnos \n",
+    "### BEGIN SOLUTION\n",
+    "import numpy as np\n",
+    "\n",
+    "np.random.seed(991) # Fijamos la semilla para reproducibilidad\n",
+    "n = 1000 # Número de evaluaciones simuladas\n",
+    "\n",
+    "# Grupo A: alto y estable\n",
+    "grupo_A = 90 + 5 * np.sin(np.linspace(0, 4 * np.pi, n)) + np.random.normal(0, 3, n)\n",
+    "#print(grupo_A)\n",
+    "### END SOLUTION"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8d7fa828-02a7-4321-a1db-f122d0ca1ef3",
+   "metadata": {},
+   "source": [
+    "<div class=\"alert alert-success\">\n",
+    "\n",
+    "# Ejercicio 2.\n",
+    "\n",
+    "Usamos la fórmula de muestra para calcular la varianza muestral (sin usar `np.var()`):\n",
+    "\n",
+    "A continuación resolvemos la **varianza del Grupo A** en **3 pasos**:\n",
+    "\n",
+    "1. **Calcular la media**\n",
+    "   Calcula $\\bar{x}$ y el tamaño de la muestra `n`.\n",
+    "\n",
+    "```python\n",
+    "import numpy as np\n",
+    "n = len(grupo_A)\n",
+    "xbar = grupo_A.mean()\n",
+    "\n",
+    "print(f\"n = {n}\")\n",
+    "print(f\"Media (x̄) = {xbar:.4f}\")\n",
+    "```\n",
+    "\n",
+    "2. **Calcular las diferencias al cuadrado y sumar**\n",
+    "   Obtén $(x_i - \\bar{x})^2$ para cada dato y suma esos cuadrados.\n",
+    "\n",
+    "```python\n",
+    "dev = grupo_A - xbar\n",
+    "diferencias_cuadradas = dev ** 2\n",
     "suma_cuadrados = np.sum(diferencias_cuadradas)\n",
     "\n",
-    "print(f\"Suma de cuadrados de desviaciones: {suma_cuadrados:.2f}\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "8114d831-5066-4da6-8864-92386b995e01",
-   "metadata": {},
-   "source": [
-    "## Problema 2: Varianza muestral\n",
+    "print(f\"Suma de cuadrados de desviaciones: {suma_cuadrados:.2f}\")\n",
+    "```\n",
     "\n",
-    "Usamos la fórmula de muestra para calcular la varianza del Grupo A sin usar `.var()`."
+    "3. **Dividir entre $n-1$ para obtener la varianza muestral**\n",
+    "   Aplica la fórmula $s^2 = \\dfrac{\\sum (x_i - \\bar{x})^2}{n-1}$.\n",
+    "\n",
+    "```python\n",
+    "var_A = suma_cuadrados / (n - 1)\n",
+    "print(f\"Varianza muestral A: {var_A:.4f}\")\n",
+    "```\n",
+    "\n",
+    "<br>\n",
+    "\n",
+    "*Copia los códigos de los puntos 1–3 en la celda que sigue y ejecútalos (todo en una sola celda si lo prefieres).*\n",
+    "\n",
+    "</div>\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "3b1c175f-e342-48cb-ad5a-ccdb7a1c17e8",
+   "execution_count": 19,
+   "id": "b119da47-f858-4ac8-8a83-f17f568c8a02",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Varianza muestral A: 21.48\n"
+      "n = 1000\n",
+      "Media (x̄) = 89.99461685484454\n",
+      "Suma de cuadrados de desviaciones: 22454.599967085203\n",
+      "Varianza muestral A: 22.454599967085205\n"
      ]
     }
    ],
    "source": [
-    "var_A = suma_cuadrados / (n - 1)\n",
-    "print(f\"Varianza muestral A: {var_A:.2f}\")"
+    "### BEGIN SOLUTION\n",
+    "import numpy as np\n",
+    "n = len(grupo_A)\n",
+    "xbar = grupo_A.mean()\n",
+    "\n",
+    "print(f\"n = {n}\")\n",
+    "print(f\"Media (x̄) = {xbar}\")\n",
+    "\n",
+    "dev = grupo_A - xbar\n",
+    "diferencias_cuadradas = dev ** 2\n",
+    "suma_cuadrados = np.sum(diferencias_cuadradas)\n",
+    "\n",
+    "print(f\"Suma de cuadrados de desviaciones: {suma_cuadrados:}\")\n",
+    "\n",
+    "\n",
+    "\n",
+    "var_A = suma_cuadrados / (n )\n",
+    "print(f\"Varianza muestral A: {var_A:}\")\n",
+    "\n",
+    "### END SOLUTION"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "573a7090-282e-4120-840f-37763e35cf34",
+   "metadata": {},
+   "source": [
+    "<div class=\"alert alert-success\">\n",
+    "\n",
+    "## Ejercicio 3.\n",
+    "\n",
+    "El siguiente código representa una función de Python que calcula la **varianza** de un conjunto de valores.\n",
+    "La función recibe el arreglo `x` y permite calcular tanto la **varianza muestral** como la **poblacional** según el parámetro `poblacional`.\n",
+    "\n",
+    "```python\n",
+    "def varianza(x, poblacional=False):\n",
+    "    x_mean = np.mean(x)\n",
+    "    diferencias_cuadradas = (x - x_mean) ** 2\n",
+    "    divisor = len(x) if poblacional else (len(x) - 1)\n",
+    "    return np.sum(diferencias_cuadradas) / divisor\n",
+    "```\n",
+    "\n",
+    "<br>\n",
+    "\n",
+    "* Copia el código anterior en la siguiente celda y ejecútalo.\n",
+    "\n",
+    "* Posteriormente, en otra celda utiliza la función `varianza(x)` para calcular la **varianza muestral** y la **varianza poblacional** del **Grupo A** como sigue:\n",
+    "\n",
+    "<br>\n",
+    "\n",
+    "```python\n",
+    "var_m_A = varianza(grupo_A)\n",
+    "var_p_A = varianza(grupo_A, poblacional=True)\n",
+    "\n",
+    "print(f\"Varianza muestral A: {var_m_A:.2f}\")\n",
+    "print(f\"Varianza poblacional A: {var_p_A:.2f}\")\n",
+    "```\n",
+    "\n",
+    "<br>\n",
+    "\n",
+    "</div>\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "732c914e-39b7-44dc-9046-6a26bbe5ec7b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def varianza(x, poblacional=False):\n",
+    "    x_mean = np.mean(x)\n",
+    "    diferencias_cuadradas = (x - x_mean) ** 2\n",
+    "    divisor = len(x) if poblacional else (len(x) - 1)\n",
+    "    return np.sum(diferencias_cuadradas) / divisor"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "ef1d43a5-e6bc-4c26-a0c7-283e7ecd717f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Varianza muestral A: 22.48\n",
+      "Varianza poblacional A: 22.45\n"
+     ]
+    }
+   ],
+   "source": [
+    "var_m_A = varianza(grupo_A)\n",
+    "var_p_A = varianza(grupo_A, poblacional=True)\n",
+    "\n",
+    "print(f\"Varianza muestral A: {var_m_A:}\")\n",
+    "print(f\"Varianza poblacional A: {var_p_A:.2f}\")\n"
    ]
   },
   {
