--- a/covarianza.ipynb
+++ b/covarianza.ipynb
@@ -2,6 +2,159 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "fa9ef7cb-22e9-470a-9ea9-f135e1c2022f",
+   "metadata": {},
+   "source": [
+    "¡Perfecto! Podemos adaptar tu sección de covarianza siguiendo **exactamente** el estilo de tu ejemplo, cambiando a un contexto más neutral, por ejemplo, **mediciones de producción en cuatro máquinas**. Además, los datos irán en una sección aparte con el código de simulación. Te propongo el siguiente markdown:\n",
+    "\n",
+    "---\n",
+    "\n",
+    "## Covarianza\n",
+    "\n",
+    "La **covarianza** es una medida estadística que indica cómo dos variables cambian conjuntamente. Permite determinar si existe una relación entre ellas y la dirección de esa relación:\n",
+    "\n",
+    "* Si la covarianza es **positiva**, ambas variables tienden a aumentar o disminuir simultáneamente.\n",
+    "* Si es **negativa**, una variable aumenta mientras la otra disminuye.\n",
+    "\n",
+    "Se representa como \\$\\text{Cov}(X, Y)\\$.\n",
+    "\n",
+    "<div class=\"alert alert-block alert-info\">\n",
+    "\n",
+    "**Definición.**\n",
+    "\n",
+    "Dadas dos variables \\$X = {x\\_1, \\dots, x\\_N}\\$ y \\$Y = {y\\_1, \\dots, y\\_N}\\$, la covarianza se define como:\n",
+    "\n",
+    "**Para la población:**\n",
+    "\n",
+    "$$\n",
+    "\\sigma_{xy} = \\frac{1}{N} \\sum_{i=1}^{N} (x_i - \\mu_x)(y_i - \\mu_y)\n",
+    "$$\n",
+    "\n",
+    "**Para la muestra:**\n",
+    "\n",
+    "$$\n",
+    "s_{xy} = \\frac{1}{n - 1} \\sum_{i=1}^{n} (x_i - \\bar{x})(y_i - \\bar{y})\n",
+    "$$\n",
+    "\n",
+    "**Donde:**\n",
+    "\n",
+    "* \\$x\\_i, y\\_i\\$: valores individuales de X e Y\n",
+    "* \\$\\mu\\_x, \\mu\\_y\\$: medias poblacionales\n",
+    "* \\$\\bar{x}, \\bar{y}\\$: medias muestrales\n",
+    "* \\$N\\$: tamaño de la población\n",
+    "* \\$n\\$: tamaño de la muestra\n",
+    "\n",
+    "</div>\n",
+    "\n",
+    "---\n",
+    "\n",
+    "<div class=\"alert alert-success\">\n",
+    "\n",
+    "## Ejercicio 1.\n",
+    "\n",
+    "Con el siguiente código en Python se genera un conjunto de **mediciones de producción diaria** de cuatro máquinas durante un periodo de \\$1000\\$ días.\n",
+    "\n",
+    "```python\n",
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "\n",
+    "np.random.seed(616) # Fijamos la semilla para reproducibilidad\n",
+    "N = 1000 # Número de días simulados\n",
+    "\n",
+    "# Simulación de producción diaria (unidades producidas)\n",
+    "maquina_A = 200 + 15 * np.sin(np.linspace(0, 4 * np.pi, N)) + np.random.normal(0, 5, N)\n",
+    "maquina_B = 180 + 20 * np.sin(np.linspace(0, 4 * np.pi, N)) + np.random.normal(0, 8, N)\n",
+    "maquina_C = 150 + 10 * np.sin(np.linspace(0, 4 * np.pi, N)) + np.random.normal(0, 6, N)\n",
+    "maquina_D = 170 + 25 * np.sin(np.linspace(0, 4 * np.pi, N)) + np.random.normal(0, 10, N)\n",
+    "\n",
+    "# DataFrame para visualización\n",
+    "df = pd.DataFrame({\n",
+    "    \"Máquina A\": np.round(maquina_A, 1),\n",
+    "    \"Máquina B\": np.round(maquina_B, 1),\n",
+    "    \"Máquina C\": np.round(maquina_C, 1),\n",
+    "    \"Máquina D\": np.round(maquina_D, 1),\n",
+    "    \"Día\": np.arange(1, N + 1)\n",
+    "})\n",
+    "\n",
+    "df.head()\n",
+    "```\n",
+    "\n",
+    "<br>\n",
+    "\n",
+    "Este código tiene las siguientes características:\n",
+    "\n",
+    "* **Generación sintética**: Se utiliza la función trigonométrica \\$\\sin()\\$ ( `np.sin()` ) para simular ciclos de producción y ruido gaussiano (`np.random.normal()`) para variaciones diarias.\n",
+    "* **Reproducibilidad**: Se fija una semilla (`np.random.seed`) para obtener resultados reproducibles.\n",
+    "* **Formato estructurado**: Los datos se almacenan en un `DataFrame` de `pandas` para facilitar su análisis y visualización.\n",
+    "* **Variables simuladas**: Cada arreglo representa la producción diaria de una máquina distinta, con distintos patrones de variabilidad y tendencia.\n",
+    "\n",
+    "<br>\n",
+    "Copia el código en la celda que sigue y ejecútalo.\n",
+    "\n",
+    "</div>\n",
+    "\n",
+    "---\n",
+    "\n",
+    "Si quieres, puedo **hacer la siguiente sección de cálculo de covarianza** también en este mismo estilo, con la explicación y ejemplo práctico de cómo calcular \\$\\text{Cov}(X, Y)\\$ entre dos máquinas.\n",
+    "\n",
+    "¿Quieres que haga esa parte ahora?\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bb998ea7-b478-489c-8662-2622c61ca5ef",
+   "metadata": {},
+   "source": [
+    "\n",
+    "<div class=\"alert alert-success\">\n",
+    "\n",
+    "## Ejercicio 1.\n",
+    "\n",
+    "Con el siguiente código en Python se genera un conjunto de **mediciones de producción diaria** de cuatro máquinas durante un periodo de \\$1000\\$ días.\n",
+    "\n",
+    "```python\n",
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "\n",
+    "np.random.seed(616) # Fijamos la semilla para reproducibilidad\n",
+    "N = 1000 # Número de días simulados\n",
+    "\n",
+    "# Simulación de producción diaria (unidades producidas)\n",
+    "maquina_A = 200 + 15 * np.sin(np.linspace(0, 4 * np.pi, N)) + np.random.normal(0, 5, N)\n",
+    "maquina_B = 180 + 20 * np.sin(np.linspace(0, 4 * np.pi, N)) + np.random.normal(0, 8, N)\n",
+    "maquina_C = 150 + 10 * np.sin(np.linspace(0, 4 * np.pi, N)) + np.random.normal(0, 6, N)\n",
+    "maquina_D = 170 + 25 * np.sin(np.linspace(0, 4 * np.pi, N)) + np.random.normal(0, 10, N)\n",
+    "\n",
+    "# DataFrame para visualización\n",
+    "df = pd.DataFrame({\n",
+    "    \"Máquina A\": np.round(maquina_A, 1),\n",
+    "    \"Máquina B\": np.round(maquina_B, 1),\n",
+    "    \"Máquina C\": np.round(maquina_C, 1),\n",
+    "    \"Máquina D\": np.round(maquina_D, 1),\n",
+    "    \"Día\": np.arange(1, N + 1)\n",
+    "})\n",
+    "\n",
+    "df.head()\n",
+    "```\n",
+    "\n",
+    "<br>\n",
+    "\n",
+    "Este código tiene las siguientes características:\n",
+    "\n",
+    "* **Generación sintética**: Se utiliza la función trigonométrica \\$\\sin()\\$ ( `np.sin()` ) para simular ciclos de producción y ruido gaussiano (`np.random.normal()`) para variaciones diarias.\n",
+    "* **Reproducibilidad**: Se fija una semilla (`np.random.seed`) para obtener resultados reproducibles.\n",
+    "* **Formato estructurado**: Los datos se almacenan en un `DataFrame` de `pandas` para facilitar su análisis y visualización.\n",
+    "* **Variables simuladas**: Cada arreglo representa la producción diaria de una máquina distinta, con distintos patrones de variabilidad y tendencia.\n",
+    "\n",
+    "<br>\n",
+    "Copia el código en la celda que sigue y ejecútalo.\n",
+    "\n",
+    "</div>\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "f087e2f8-6728-41a1-9036-4cac1bb4cf75",
    "metadata": {},
    "source": [
